<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <EditText
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tv1"
        android:inputType="number" />

    <EditText
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tv2"
        android:inputType="number" />

    <EditText
        android:id="@+id/tv5"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tv5"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/grupo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:duplicateParentState="true"
            android:onClick="onRadioButtonCliked"
            android:text="@string/r1" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonCliked"
            android:text="@string/r3" />

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonCliked"
            android:text="@string/r2" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="operar"

        android:text="@string/button"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="282dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="acercade"
        android:text="@string/acerca" />

    <TextView
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="Resultado" />

</LinearLayout>
